# JPEG_Encoder

./: CMakeLists.txt  README.md  main.cpp
include/: BitStream.h  DCT.h  Huffman.h  Image2D.h  Quantization.h  RLE.h  Sampling.h  Segments.h  utils.h
